--- a/articles.html
+++ b/articles.html
@@ -87,7 +87,10 @@
         </header>
         <main>
             <div class="container is-fluid">
-                <div class="columns">
+                <div
+                    style="border: 1px solid black; margin: 5px"
+                    class="columns"
+                >
                     <div class="column is-half">
                         <div class="section">
                             <h1 class="subtitle">How to Take Care of a Dog</h1>
@@ -112,7 +115,14 @@
                             </article>
                         </div>
                     </div>
-                    <div class="column is-half">
+                    <div
+                        style="
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                        "
+                        class="column is-half"
+                    >
                         <img
                             src="https://images.unsplash.com/photo-1558929996-da64ba858215?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1746&q=80"
                             alt="Dog Image"
@@ -120,8 +130,18 @@
                     </div>
                 </div>
 
-                <div class="columns">
-                    <div class="column is-half">
+                <div
+                    style="border: 1px solid black; margin: 5px"
+                    class="columns"
+                >
+                    <div
+                        style="
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                        "
+                        class="column is-half"
+                    >
                         <img
                             src="https://images.unsplash.com/photo-1536809188428-e8ecf663d0be?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTd8fGRvZ3N8ZW58MHx8MHx8&auto=format&fit=crop&w=900&q=60"
                             alt="Dog Image"
@@ -155,7 +175,10 @@
                     </div>
                 </div>
 
-                <div class="columns">
+                <div
+                    style="border: 1px solid black; margin: 5px"
+                    class="columns"
+                >
                     <div class="column is-half">
                         <div class="section">
                             <h1 class="subtitle">
@@ -182,7 +205,14 @@
                             </article>
                         </div>
                     </div>
-                    <div class="column is-half">
+                    <div
+                        style="
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                        "
+                        class="column is-half"
+                    >
                         <img
                             src="https://images.unsplash.com/photo-1518717758536-85ae29035b6d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8ZG9nc3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=900&q=60"
                             alt="Dog Image"
