--- a/food.html
+++ b/food.html
@@ -86,7 +86,10 @@
         </header>
         <main>
             <div class="container is-fluid">
-                <section class="px-6">
+                <section
+                    style="border-bottom: 1px solid black; padding: 2px 10px"
+                    class="px-6"
+                >
                     <nav class="level" style="">
                         <div class="level-left">
                             <div class="level-item">
