add select in form

--- a/appointment.html
+++ b/appointment.html
@@ -199,6 +199,19 @@
                                 </div>
                             </div>
 
+                                            <div class="field">
+                <label class="label">Select The Plan</label>
+                <div class="control">
+                    <div class="select">
+                    <select>
+                        <option>Spa Bath</option>
+                        <option>Bath + Basic Grooming</option>
+                        <option>Full Service</option>
+                    </select>
+                    </div>
+                </div>
+                </div>
+
                             <div class="field">
                                 <label class="label">Date</label>
                                 <div class="control">
