--- a/food.html
+++ b/food.html
@@ -112,7 +112,7 @@
                                         <input
                                             class="input"
                                             type="text"
-                                            placeholder="Search for Food"
+                                            placeholder="Search"
                                         />
                                     </p>
                                     <p class="control">
@@ -146,8 +146,12 @@
                             </div>
                         </div>
                         <footer class="card-footer">
-                            <a role="button" class="card-footer-item">Add</a>
-                            <a role="button" class="card-footer-item">Remove</a>
+                            <a role="button" class="add card-footer-item"
+                                >Add</a
+                            >
+                            <a role="button" class="remove card-footer-item"
+                                >Remove</a
+                            >
                         </footer>
                     </div>
                     <div class="card">
@@ -174,8 +178,12 @@
                             </div>
                         </div>
                         <footer class="card-footer">
-                            <a role="button" class="card-footer-item">Add</a>
-                            <a role="button" class="card-footer-item">Remove</a>
+                            <a role="button" class="add card-footer-item"
+                                >Add</a
+                            >
+                            <a role="button" class="remove card-footer-item"
+                                >Remove</a
+                            >
                         </footer>
                     </div>
                     <div class="card">
@@ -206,8 +214,12 @@
                             </div>
                         </div>
                         <footer class="card-footer">
-                            <a role="button" class="card-footer-item">Add</a>
-                            <a role="button" class="card-footer-item">Remove</a>
+                            <a role="button" class="add card-footer-item"
+                                >Add</a
+                            >
+                            <a role="button" class="remove card-footer-item"
+                                >Remove</a
+                            >
                         </footer>
                     </div>
                     <div class="card">
