--- a/articles.html
+++ b/articles.html
@@ -59,7 +59,11 @@
                         <span aria-hidden="true"></span>
                     </a>
                 </div>
-                <div id="navMenu" class="navbar-menu">
+                <div
+                    id="navMenu"
+                    style="border-radius: 10px"
+                    class="navbar-menu"
+                >
                     <div class="navbar-end">
                         <!-- <div class="navbar-item has-dropdown is-hoverable">
                             <a class="navbar-link"> Home </a>
